# Bolster

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAKING_RELEASES.md  README.md  TESTING.md  rustfmt.toml
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: api.rs  commands.rs  error.rs  hazard.rs  lib.rs
docker/: Dockerfile
fixtures/: aprilgrid_detector.toml  example.plex  test_partial_config.toml
src/: app_config.rs  cli.rs  core.rs  lib.rs  main.rs  object_space.rs  utils.rs
src/benches/: 01_default.rs
src/core/: api.rs  commands.rs  error.rs  hazard.rs  models.rs
src/core/api/: datasets.rs  digitalocean_spaces.rs  storage.rs
src/resources/: test_full_config.toml  test_partial_config.toml
src/utils/: app_config.rs  logger.rs
src/utils/tests/: test_config.rs
tests/: test_cli.rs
utils/: Cargo.toml
utils/src/: app_config.rs  error.rs  lib.rs  logger.rs
