[package]
name = "bolster"
version = "0.2.0"
authors = [
    "Greg Schafer <greg.schafer@tangramvision.com>",
    "Jeremy Steward <jeremy.steward@tangramvision.com>"
]
edition = "2018"
publish = false
repository = "https://gitlab.com/tangram-vision-oss/bolster"
readme = "README.md"
description = """
CLI tool for managing sensor datasets, including upload/download and search/sort/filter.

For more detailed documentation, visit: https://tangram-vision.gitlab.io/bolster/
"""
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
better-panic = "0.2"
bytes = "1.0"
byte-unit = "4.0"
chrono = "0.4"
# Using clap beta because it's pretty stable and makes many breaking changes,
# we might as well be forward-looking with dependencies since bolster is a
# binary crate.
# https://github.com/clap-rs/clap/blob/master/CHANGELOG.md#v300-beta2-2020-09-18
clap = "= 3.0.0-beta.2"
config = "0.10"
env_logger = "0.8"
futures = "0.3"
futures-core = "0.3"
human-panic = "1.0"
indicatif = "0.16"
lazy_static = "1.4"
log = "0.4"
md5 = "0.7"
openssl = { version = "= 0.10.36", features = ["vendored"]}
rand = "0.8"
read-progress-stream = "1.0"
rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_s3 = "0.46"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
shellexpand = "2.1"
strum = "0.20"
strum_macros = "0.20"
tokio = { version = "1.1", features = ["fs"]}
tokio-util = { version = "0.6", features = ["codec", "io"]}
toml = "0.5"
url = { version = "2.2", features = ["serde"]}
uuid = { version = "0.8", features = ["serde"]}
walkdir = "2.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "native-tls"]

[dev-dependencies]
assert_cmd = "1.0"
httpmock = "0.5"
predicates = "1.0"
rusoto_mock = "0.46"
tokio-test = "0.4"
