[package]
name = "cli"
version = "0.1.0"
authors = ["Greg Schafer <greg.schafer@tangramvision.com>"]
edition = "2018"
publish = false
description = "CLI interface"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
