[package]
name = "core"
version = "0.1.0"
authors = ["Greg Schafer <greg.schafer@tangramvision.com>"]
edition = "2018"
publish = false
description = "The application core code"

[dependencies]
utils = { path = "../utils" }

rand = "0.7.3"
log = "0.4.11"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]
